2006-07-25  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #28413
	* gnu/java/util/regex/RETokenEnd.java(check_java_line_terminators):
	New field.
	(RETokenEnd): New constructer to set check_java_line_terminators.
	(matchThis): Checck line terminators if check_java_line_terminators.
	* gnu/java/util/regex/RETokenStart.java: Likewise.
	* gnu/regexp/RE.java(initialize): Use the new constructors for
	RETokenEnd and RETokenStart if REG_MULTILINE is set.
	* java/util/regex/Pattern.java(Patteren): Changed so that
	gnu/regexp/RE.java may use the new the new constructors.

2006-07-25  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(focusTraversalPolicyProvider): New field.
	(isFocusTraversalPolicyProvider): New method.
	(setFocusTraversalPolicyProvider): New method.
	* java/awt/ContainerOrderFocusTraversalPolicy.java
	(getFirstComponent): Use accept() instead of lengthy checks.
	Don't fetch getComponents() to avoid copying of array.
	Traverse down the hierarchy to find the first focused component.
	* java/awt/DefaultKeyboardFocusManager.java
	(dispatchEvent): Let the initial component request focus.

2006-07-25  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/Segment.java
	(last): Update current index before returning DONE for zero count.
	
2006-07-24  Mark Wielaard  <mark@klomp.org>

	* javax/swing/tree/TreePath.java (equals): Swap path equals call.

2006-07-25  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicMenuBarUI.java
	(FocusAction): New inner class. Used to grab focus.
	(installKeyboardActions): Implemented.
	(uninstallKeyboardActions): Implemented.
	(getActionMap): New helper method.
	(createDefaultActions): New helper method.

2006-07-25  Robert Schuster <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	(mkMenuBar): Install instantiable basic look and feel.
	(InstantiableBasicLookAndFeel): New inner class.

2006-07-25  Roman Kennke  <kennke@aicas.com>
